# UAV_Detection_And_Tracking_System

./: README.md
tk1/: CMakeLists.txt
tk1/rosdji_sdk/devel/: _catkin  _rosinstall  setup.sh
tk1/rosdji_sdk/devel/include/dji_sdk/: A3GPS.h  A3RTK.h  Acceleration.h  Activation.h  ActivationRequest.h  ActivationResponse.h  AttitudeControl.h  AttitudeControlRequest.h  AttitudeControlResponse.h  AttitudeQuaternion.h  CameraActionControl.h  CameraActionControlRequest.h  CameraActionControlResponse.h  Compass.h  DroneArmControl.h  DroneArmControlRequest.h  DroneArmControlResponse.h  DroneTaskAction.h  DroneTaskActionFeedback.h  DroneTaskActionGoal.h  DroneTaskActionResult.h  DroneTaskControl.h  DroneTaskControlRequest.h  Gimbal.h  (+127 more)
tk1/rosdji_sdk/src/Onboard-SDK-ROS-3.1/kcf_detect/: CMakeLists.txt  CMakeLists.txt.yuanshibackup
tk1/rosdji_sdk/src/Onboard-SDK-ROS-3.1/kcf_detect/include/: flage.h
tk1/rosdji_sdk/src/Onboard-SDK-ROS-3.1/kcf_detect/launch/: kcf.launch
tk1/rosdji_sdk/src/Onboard-SDK-ROS-3.1/kcf_detect/msg/: dectrect.msg
tk1/rosdji_sdk/src/Onboard-SDK-ROS-3.1/kcf_detect/src/: runtracker.cpp  runtracker.cpp.16-12-25.backup  runtracker.cpp.original.backup  runtracker.cpp_17_3_11_backup  runtracker.cpp_17_4_13_backup  runtracker.cpp_17_4_15_backup  runtracker.cpp_17_4_18_bak
tx1/: CMakeLists.txt
tx1/devel/: _catkin  _rosinstall  setup.sh
tx1/devel/lib/jetson/: detectnet-console
tx1/devel/lib/pkgconfig/: jetson.pc  subjetson.pc
tx1/devel/lib/subjetson/: listener
tx1/src/jetson/: CMakePreBuild.sh  Makefile  detectNet.cpp  detectNet.h
tx1/src/jetson/car12/: original.prototxt  solver.prototxt  status.pickle  train_val.prototxt
tx1/src/jetson/detectnet-console/: CMakeLists.txt  Makefile  cmake_install.cmake  detectnet-console.cpp
tx1/src/jetson/msg/: Sendselect.msg  flage.msg  rect.msg
tx1/src/jetson/ped-100/: Untitled Document  deploy.prototxt.backup  info.json  original.prototxt  solver.prototxt  train_val.prototxt
tx1/src/jetson/tools/: resize-images.sh
tx1/src/subjetson/: CMakeLists.txt  Sendselect.h  listener.cpp
(+447 files in other folders)
